update scalafix template and add crossBuild config