@@ -1,4 +1,3 @@
-import java.lang.ProcessBuilder
 lazy val root = project
   .in(file("."))
   .settings(
@@ -9,13 +8,14 @@ lazy val root = project
       val _ = (g8Test in Test).toTask("").value
       val process = new ProcessBuilder("sbt", "tests/test")
         .directory(file("target/g8/scalafix"))
-        .run()
+        .start()
       assert(process.exitValue() == 0, "Non-zero exit from sbt tests/test")
     },
-    scriptedLaunchOpts ++= List("-Xms1024m",
-                                "-Xmx1024m",
-                                "-XX:ReservedCodeCacheSize=128m",
-                                "-XX:MaxPermSize=256m",
-                                "-Xss2m",
-                                "-Dfile.encoding=UTF-8")
+    scriptedLaunchOpts ++= List(
+      "-Xms1024m",
+      "-Xmx1024m",
+      "-XX:ReservedCodeCacheSize=128m",
+      "-Xss2m",
+      "-Dfile.encoding=UTF-8"
+    )
   )
